# ControlPi

./: .gitignore  CMakeLists.txt  ControlPi  IO_Channel_AccesWrapper.cpp  IO_Channel_AccesWrapper.h  LICENSE  boolLogicParser.cpp  boolLogicParser.h  bootstrap.sh  build.sh  globals.h  iterationSwitchGuard.cpp  iterationSwitchGuard.h  logic.conf  main.cpp  readme.md  regReplaceExtension.cpp  regReplaceExtension.h  reloadConf.sh  start_InstallMeFirst.sh  start_as_service.sh  start_manual.sh  start_pull_and_build.sh  timercpp.cpp  timercpp.h  timercppNew.h
conf/: .htpasswd  ControlPi.conf  README  logic.conf  logic.conf.bak  logic.json  timers.conf
h/: ControlPi.service  build.sh  createService.sh  install-gcc-8.2-ARM.sh  installBoost-1.6.9.sh  installBoostBeast.sh  installBoostGit.sh  installComposer.sh  manualStart.sh  mk  rebuild.sh  reloadConf  reloadConf.c  reloadConf.sh  renew_passwort_frontent.sh  updateCmake.sh  www-apache2-config.conf  www-setupApache.sh
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml  timestamps-solarpi.fritz.box-julian-22
pifacewrapper/: PiFaceWrapper.cpp  PiFaceWrapper.h
src/: CommandProcessor.cpp  CommandProcessor.h  ConfigParser.cpp  ConfigParser.h
src/ChannelEntitys/: Channel_Entities_PiFace.cpp  Channel_Entities_PiFace.h  Channel_Entity.cpp  Channel_Entity.h  Channel_Entity_Memory.cpp  Channel_Entity_Memory.h  Channel_Entity_Pipe_RX.cpp  Channel_Entity_Pipe_RX.h  Channel_Entity_Pipe_TX.cpp  Channel_Entity_Pipe_TX.h  Channel_Entity_TimerOutput.cpp  Channel_Entity_TimerOutput.h  Channel_Entity_TimerTrigger.cpp  Channel_Entity_TimerTrigger.h
src/IOChannels/: IO_Channel.cpp  IO_Channel.h  IO_Channel_Hw.cpp  IO_Channel_Hw.h  IO_Channel_Hw_PiFace.cpp  IO_Channel_Hw_PiFace.h  IO_Channel_Virtual.cpp  IO_Channel_Virtual.h  IO_Channel_Virtual_Memory.cpp  IO_Channel_Virtual_Memory.h  IO_Channel_Virtual_Pipe.cpp  IO_Channel_Virtual_Pipe.h  IO_Channel_Virtual_Timer.cpp  IO_Channel_Virtual_Timer.h
src/WebSocket/: CMakeLists.txt  listener.cpp  listener.hpp  shared_state.cpp  shared_state.hpp  websocket_session.cpp
www/: getServiceStatus.php  index.html  index.php  indexnew.html  init.sh  license.txt  logic.conf  logic.json  logicUpdateApi.php  reloadConf  reloadConf.php  resetPermission.sh  webSockCoupler.php  websocketAdaptor.php
www/cirquit/: index.html  index.html.bak
www/css/: style.css
www/js/: .websocketclient.js.kate-swp  easy-editable-text.js
www/logic-editor/: .htaccess  edit.html  index.html
www/logic-editor/css/: UX.css
www/logic-editor/js/: UX.js  data.js  index.html  logicExport.js  logix.js  modules.js
